Fix selection-pointer use font-size:0 instead of positioning off-screen to avoid scroll off-screen on focus

--- a/styles/core.css
+++ b/styles/core.css
@@ -119,8 +119,7 @@
   z-index: -1;
   outline: none;
   line-height: 0;
-  position: absolute;
-  left: -9999px;
+  font-size: 0;
 }
 
 .carbon figure figcaption {
